--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "@tanstack/react-query": "^4.35.7",
     "antd": "^5.11.0",
     "bootstrap": "^5.3.2",
-    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
-    "styled-components": "^6.1.0",
-    "yup": "^1.3.2"
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
