--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd": "^5.11.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
